# PurpleGB

./: .gitignore  CMakeLists.txt  LICENSE
include/: application.hpp  cpu.hpp  memory.hpp  ppu.hpp
src/: application.cpp  cpu.cpp  main.cpp  memory.cpp  ppu.cpp
